welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:9: error: type mismatch;
 found   : Unit
 required: Boolean
  if(isAsleep==true)
  ^